--- a/profile.html
+++ b/profile.html
@@ -18,9 +18,9 @@
   <!-- 並べ替え対象を選ぶと「表示する列」が切り替わる -->
   <label for="">並べ替え</label>
   <select name="">
-    <option value="sekiji">席次の小さい順</option>
-    <option value="kishi-no">棋士番号の小さい順</option>
-    <option value="age">現在の年齢と享年</option>
+    <option value="sekiji">席次</option>
+    <option value="kishi-no">棋士番号</option>
+    <option value="age">年齢（享年）</option>
   </select>
 
   <!-- 昇順・降順（選んだだけで即反映） -->
