--- a/profile.html
+++ b/profile.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <title>将棋の殿堂</title>
-    <link rel="stylesheet" href="style.css?v=20251103-b">
+    <link rel="stylesheet" href="style.css?v=20251103-c">
 </head>
 <body>
 <header>
@@ -25,8 +25,9 @@
 
   <!-- 昇順・降順（選んだだけで即反映） -->
   <p>並び順</p>
-  <label><input type="radio" name="order" value="asc" checked> 昇順</label>
-  <label><input type="radio" name="order" value="desc"> 降順</label>
+<label><input type="radio" name="order" value="keep" checked> 席次順</label>
+<label><input type="radio" name="order" value="asc"> 昇順</label>
+<label><input type="radio" name="order" value="desc"> 降順</label>
 </section>
 
 <table>
@@ -44,60 +45,65 @@
 
 <script>
 // =======================================
-// profile.html 全置き換え版 script
-// 要件：
-// 1) 初期表示 … CSVを読み込んで「席次」の小さい順で表示
-// 2) section のセレクト … 選んだ“項目に対応する列だけ”を表示する（この時点では並べ替えしない）
-//      - sekiji    → 区分・席次・棋士名・段位/称号
-//      - kishi-no  → 区分・棋士番号・棋士名・段位/称号
-//      - age       → 区分・棋士名・年齢・生年月日
-// 3) section のラジオ … 昇順/降順を選んだときにだけ並べ替える
-//      - 並び替え対象は「今セレクトで選ばれている項目」
-// 4) CSVは列名で参照
-// 5) id/classは勝手に付けない
+// profile.html script（三択ラジオ版）
+//
+// ラジオの想定：name="order"
+//  - value="keep"    … 席次順のまま（初期表示と同じ）←初期チェック
+//  - value="asc"     … 今セレクトで選んでる項目を昇順に並べ替え
+//  - value="desc"    … 今セレクトで選んでる項目を降順に並べ替え
+//
+// セレクトの想定：
+//  - value="sekiji"
+//  - value="kishi-no"
+//  - value="age"
+//
+// 挙動：
+// 1) 初期表示 … CSVを席次でソートしたものを「区分・席次・棋士名・段位/称号」で表示
+// 2) セレクト変更 … 列だけ切り替える。並びは“今のラジオ”に従う。
+//      - ラジオがkeepなら → 席次順のまま表示
+//      - ラジオがasc/descなら → その場でソートして表示
+// 3) ラジオ変更 … 今のセレクトに対して並び替えを実行して表示
 // =======================================
 
 const CSV_URL = 'profile.csv';
 
-// 今日（JSTローカル扱い）※年齢計算用
+// 今日（年齢計算用・ローカル）
 const today = (function() {
   const d = new Date();
   return new Date(d.getFullYear(), d.getMonth(), d.getDate());
 })();
 
-// 読み込んだ全行（初期状態は席次昇順にしておく）
+// 席次でソートした“原本”
 let baseData = [];
 
-// 今選ばれている表示モード（selectの値と合わせる）
+// 今の表示モード（セレクトの値）
 let currentMode = 'sekiji'; // "sekiji" | "kishi-no" | "age"
-// 今選ばれている並び順
-let currentOrder = 'asc';
+
+// 今の並びモード（ラジオの値）…初期はkeep
+let currentOrder = 'keep';
 
 fetch(CSV_URL)
   .then(res => res.text())
   .then(text => {
     const rows = parseCSV(text);
-    // 段位/称号＋年齢などを付与
     const enriched = rows.map(r => enrichRow(r));
-    // 初期状態の“原本”は席次昇順で持っておく
+    // 原本は席次で固定
     baseData = enriched.slice().sort((a, b) => toNumberSafe(a['席次']) - toNumberSafe(b['席次']));
-    // 初期表示（席次モード・席次昇順）
+    // 初期表示（席次モード×席次順）
     renderTable(baseData, 'sekiji');
-    // イベント設定
     setupUI();
   })
   .catch(err => console.error('CSV読み込み失敗:', err));
 
 
-// ---------------------------------------
-// CSV → オブジェクト配列（列名で参照）
-// ---------------------------------------
+// -------------------------
+// CSV → 配列
+// -------------------------
 function parseCSV(csvText) {
   const lines = csvText.trim().split(/\r?\n/);
   if (!lines.length) return [];
   const header = lines[0].split(',').map(h => h.trim());
   const out = [];
-
   for (let i = 1; i < lines.length; i++) {
     if (!lines[i].trim()) continue;
     const cols = lines[i].split(',');
@@ -110,18 +116,16 @@ function parseCSV(csvText) {
   return out;
 }
 
-// ---------------------------------------
-// 行を拡張する
-// ・CSVの「段位」「称号」から表示用の段位/称号を作る
-// ・生年月日/没年月日から「◯歳◯か月◯日」も作る
-// ---------------------------------------
+// -------------------------
+// 行の拡張：段位/称号・年齢
+// -------------------------
 function enrichRow(row) {
   // 段位/称号
   const title = (row['称号'] || '').trim();
   const dan = (row['段位'] || '').trim();
   const danOrTitle = title ? title : dan ? dan : '';
 
-  // 年齢系
+  // 年齢
   const birth = toDateSafe(row['生年月日']);
   const died = toDateSafe(row['没年月日']);
   const endDate = died ? died : today;
@@ -145,7 +149,6 @@ function enrichRow(row) {
     let day = d2 - d1;
 
     if (day < 0) {
-      // 前月の日数を借りる
       const prevMonthLast = new Date(y2, m2, 0).getDate();
       day += prevMonthLast;
       month--;
@@ -166,27 +169,23 @@ function enrichRow(row) {
   });
 }
 
-// ---------------------------------------
-// 日付をローカルで生成（ズレ防止）
-// ---------------------------------------
+// -------------------------
+// 日付系
+// -------------------------
 function toDateSafe(str) {
   if (!str) return null;
   const m = str.match(/^(\d{4})-(\d{2})-(\d{2})$/);
   if (!m) return null;
-  const y = Number(m[1]);
-  const mo = Number(m[2]);
-  const d = Number(m[3]);
-  return new Date(y, mo - 1, d);
+  return new Date(Number(m[1]), Number(m[2]) - 1, Number(m[3]));
 }
 
-function diffDays(start, end) {
-  if (!start || !end) return null;
-  return Math.floor((end.getTime() - start.getTime()) / 86400000);
+function diffDays(a, b) {
+  return Math.floor((b.getTime() - a.getTime()) / 86400000);
 }
 
-// ---------------------------------------
+// -------------------------
 // UIイベント
-// ---------------------------------------
+// -------------------------
 function setupUI() {
   const section = document.querySelector('section');
   if (!section) return;
@@ -194,28 +193,40 @@ function setupUI() {
   const sel = section.querySelector('select');
   const radios = section.querySelectorAll('input[type="radio"][name="order"]');
 
-  // セレクトを変えたら「表示だけ変える」。並べ替えはまだしない。
+  // セレクト変更時：列だけ切り替える or 並べ替える
   sel.addEventListener('change', () => {
-    currentMode = sel.value; // "sekiji" | "kishi-no" | "age"
-    // 並べ替えはしないので baseData の順番のまま、そのモードの列で表示
-    renderTable(baseData, currentMode);
+    currentMode = sel.value;  // "sekiji" | "kishi-no" | "age"
+    // ラジオがkeepなら席次順のまま表示
+    if (currentOrder === 'keep') {
+      renderTable(baseData, currentMode);
+    } else {
+      // 昇順/降順なら、その順に並べ替えて表示
+      const sorted = sortData(baseData, currentMode, currentOrder);
+      renderTable(sorted, currentMode);
+    }
   });
 
-  // ラジオを変えたら「その時点のモードで並べ替えを実行」して表示
+  // ラジオ変更時：その場で並べ替え
   radios.forEach(r => {
     r.addEventListener('change', () => {
       if (!r.checked) return;
-      currentOrder = r.value; // "asc" | "desc"
-      const sorted = sortData(baseData, currentMode, currentOrder);
-      renderTable(sorted, currentMode);
+      currentOrder = r.value; // "keep" | "asc" | "desc"
+
+      if (currentOrder === 'keep') {
+        // 席次に戻す：baseDataは席次順で保持しているのでそれを表示
+        renderTable(baseData, currentMode);
+      } else {
+        // 今のモードで昇順/降順に並べ替え
+        const sorted = sortData(baseData, currentMode, currentOrder);
+        renderTable(sorted, currentMode);
+      }
     });
   });
 }
 
-// ---------------------------------------
-// 並べ替え
-// modeとorderでキーを切り替える
-// ---------------------------------------
+// -------------------------
+// 並べ替え本体
+// -------------------------
 function sortData(data, mode, order) {
   const copied = data.slice();
   const dir = (order === 'desc') ? -1 : 1;
@@ -234,7 +245,7 @@ function sortData(data, mode, order) {
       return (aa - bb) * dir;
     });
   } else {
-    // デフォルトは席次
+    // 席次
     copied.sort((a, b) => (toNumberSafe(a['席次']) - toNumberSafe(b['席次'])) * dir);
   }
 
@@ -247,19 +258,16 @@ function toNumberSafe(v) {
   return n;
 }
 
-// ---------------------------------------
-// テーブル描画
-// modeによって列セットを変える
-// ---------------------------------------
+// -------------------------
+// テーブル描画（モードで列を変える）
+// -------------------------
 function renderTable(rows, mode) {
   const table = document.querySelector('table');
   const thead = table.querySelector('thead');
   const tbody = table.querySelector('tbody');
 
-  // モード別に列を決める
   let cols;
   if (mode === 'age') {
-    // 年齢表示モード
     cols = [
       { key: '区分', label: '区分' },
       { key: '棋士名', label: '棋士名' },
@@ -267,20 +275,19 @@ function renderTable(rows, mode) {
       { key: '生年月日', label: '生年月日' }
     ];
   } else if (mode === 'kishi-no') {
-    // 棋士番号モード
     cols = [
       { key: '区分', label: '区分' },
       { key: '棋士番号', label: '棋士番号' },
       { key: '棋士名', label: '棋士名' },
-      { key: '__dan_or_title__', label: '段位または称号' }
+      { key: '__dan_or_title__', label: '段位/称号' }
     ];
   } else {
-    // 席次モード（初期表示）
+    // sekiji
     cols = [
       { key: '区分', label: '区分' },
       { key: '席次', label: '席次' },
       { key: '棋士名', label: '棋士名' },
-      { key: '__dan_or_title__', label: '段位または称号' }
+      { key: '__dan_or_title__', label: '段位/称号' }
     ];
   }
 
